--- a/매거진과책.html
+++ b/매거진과책.html
@@ -14,17 +14,17 @@
 <p><h2 >UP</h2>
   Uijeongbu / People<br>
   Urban / Place<br>
-  <img src="_MG_3687.jpg" width="60%"><br>
-  <img src="_MG_3699.jpg" width="30%">
-  <img src="_MG_3710.jpg" width="30%">
+  <img src="up 표지.jpg" width="60%"><br>
+  <img src="up 내지1.jpg" width="30%">
+  <img src="up 내지2.jpg" width="30%">
 </p>
 <br>
 <p>
   <p><h2 >사소한 날들</h2>
     의정부 시민들이 직접 보내주신 글과 사진 묶음집<br>
-    <img src="_MG_3671.jpg" width="60%"><br>
-    <img src="_MG_3686.jpg" width="30%">
-    <img src="_MG_3689.jpg" width="30%">
+    <img src="사소한 날들 표지.jpg" width="60%"><br>
+    <img src="사소한 날들 내지1.jpg" width="30%">
+    <img src="사소한 날들 내지2.jpg" width="30%">
   </p>
   <p>
 </body>
