linked in logo img

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1><a href="index.html">81.54</a></h1>
-<img src="81.54 logo.png" width="20%"><br>
+  <a href="index.html"><img src="81.54 logo.png" width="20%"></a><br>
 <ol>
   <li><a href="소개.html">소개</a></li>
   <li><a href="매거진과책.html">매거진과책</a></li>
