--- a/소개.html
+++ b/소개.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 </head>
 <body>
-<h1><a href="1.html">81.54</a></h1>
+<h1><a href="index.html">81.54</a></h1>
 <img src="81.54 logo.png" width="20%"><br>
 <ol>
   <li><a href="소개.html">소개</a></li>
